--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="intro">
         <h1>TIC TAC TOE game</h1>
-        <button class="btn"><a href="game.html">Play</a></button>
+        <a href="game.html"><button class="btn">PLAY</button></a>
     </div>
     <script src="script/main.js"></script>
 </body>
